--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ body {
   font-weight: bold;
 }
 
+.list a {
+  padding-left: 4px;
+}
+
 .list-horizontal li {
   display: inline-block;
 }
@@ -97,6 +101,10 @@ body {
 
 .post-author {
   font-style: italic;
+}
+
+.post-author a {
+  padding-left: 4px;
 }
 
 .post-tags {
