--- a/sass/style.scss
+++ b/sass/style.scss
@@ -83,6 +83,9 @@ body {
   .active {
     font-weight: bold;
   }
+  a {
+    padding-left: 4px;
+  }
 }
 
 .list-horizontal {
@@ -110,6 +113,9 @@ body {
 
 .post-author {
   font-style: italic;
+  a {
+    padding-left: 4px;
+  }
 }
 
 .post-tags {
