--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,31 +128,35 @@ body {
 /* Tags list */
 
 .tag-size-1 {
-  font-size 10px;
+  font-size: 10px;
   text-decoration: none;
   color: gray;
 }
 
 .tag-size-2 {
-  font-size 14px;
+  font-size: 14px;
   text-decoration: none;
   color: black;
 }
 
 .tag-size-3 {
-  font-size 18px;
+  font-size: 18px;
   text-decoration: none;
   color: green;
 }
 
 .tag-size-4 {
-  font-size 22px;
+  font-size: 22px;
   text-decoration: none;
   color: blue;
 }
 
 .tag-size-5 {
-  font-size 26px;
+  font-size: 26px;
   text-decoration: none;
   color: red;
+}
+
+.tags li {
+  display: inline;
 }
